--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,22 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # firebase: ^7.2.1
   cupertino_icons: ^0.1.2
+  firebase_auth: ^0.15.5+2
+  firebase_crashlytics: ^0.1.3
+  connectivity: ^0.4.8+1
+  cached_network_image: ^2.0.0
+  firebase_performance: ^0.3.1+5
+  cloud_firestore: ^0.13.4
+  firebase_analytics: ^5.0.11
+  google_sign_in: ^4.1.4
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
